Schedule fix and dark mode color changes

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -18,13 +18,13 @@
   }
 
   .dark {
-    --background: #191919; 
-    --surface:    #1d2630;   
+    --background: #181818; 
+    --surface:    #232931;   
     --header:     #212121;   
     --footer:     #6482B0;  
     --muted:      #2b2e32;   
-    --foreground: #E0E0E1;   
-    --border:     #6d6d6e;  
+    --foreground: #e0e0e1;   
+    --border:     #2b2b2b;  
     --input:      #374966;  
     --input-foreground: #E0E0E1;
   }
